// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Input component borderless input renders correctly 1`] = `
<div
  className="borderless md"
>
  <label>
    
  </label>
  <div
    className="wrap"
  >
    
    <input
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`The Input component default input renders correctly 1`] = `
<div
  className="default md"
>
  <label>
    
  </label>
  <div
    className="wrap"
  >
    
    <input
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder=""
      type="text"
      value=""
    />
  </div>
</div>
`;
